Revert "Fixed issue #16. Scrollbars now show by default."
This reverts commit 499cf837ef9380da5785c36426abf48f905a54d6.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -371,13 +371,3 @@ input {
     right: 3px;
     top: 4px;
 }
-
-/*OS X to always show scroll bars*/
-::-webkit-scrollbar {
-    -webkit-appearance: none;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0,0,0,.5);
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
-}
